--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -3,8 +3,9 @@
     border: none;
     outline: none;
     padding: 10px;
-    width: 150px;
+    width: 180px;
     line-height: 30px;
     margin-bottom: 30px;
+    border-radius: 2.6px;
   }
   
